[tool.poetry]
name = "pylnsocket"
version = "0.1.0"
description = "Python wrapper for static jb55/lnsocket C library"
authors = ["21M4TW <21M4TW@proton.me>"]
packages = [{ include = "pylnsocket" }]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
cython = "^3.1.2"

[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"
