[project]
name = "pylnsocket"
version = "0.1.0"
description = "A Python extension for the jb55/lnsocket C library"
authors = [{ name = "21M4TW", email="21M4TW@proton.me"}]

[tool.poetry.dependencies]
python = ">=3.9"
ijson = "^3.4.0"

[tool.poetry.group.dev.dependencies]
cython = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["pylnsocket"]
