[project]
name = "pylnsocket"
version = "0.1.1"

[tool.poetry]
name = "pylnsocket"
version = "0.1.1"
description = "A Python extension for the jb55/lnsocket C library"
authors = ["21M4TW <21M4TW@proton.me>"]
packages = [
  { include = "pylnsocket" }
]

[tool.poetry.dependencies]
python = ">=3.9"
ijson = "^3.4.0"
cython = "^3.1.2"

[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pylnsocket"]  # Only include desired packages

[tool.setuptools.package-dir]
pylnsocket = "pylnsocket"

[tool.setuptools.exclude-package-data]
"pylnsocket" = ["lnsocket/*"]
